--- a/src/app/components/listings/listing-show/listing-show.component.scss
+++ b/src/app/components/listings/listing-show/listing-show.component.scss
@@ -1,4 +1,27 @@
+.swap-button {
+  font-size: 16px;
+  background-color: #8fffc3;
+  color: #232323;
+  margin-bottom: 1rem;
+}
+
 .container {
   margin: 2rem;
   color: #858585;
+  display: flex;
+  justify-content: space-around;
+}
+
+.user-info {
+  width: 43%;
+  background-color: #1d1d1d;
+  padding: 2rem;
+  border-radius: 4px;
+}
+
+.game-info {
+  width: 43%;
+  background-color: #1d1d1d;
+  padding: 2rem;
+  border-radius: 4px;
 }
