change button class to create-swap-button

--- a/src/app/components/listings/listing-show/listing-show.component.html
+++ b/src/app/components/listings/listing-show/listing-show.component.html
@@ -6,7 +6,7 @@
     <h1>{{ listing?.condition }}</h1>
     <button
       mat-raised-button
-      class="swap-button"
+      class="create-swap-button"
       *ngIf="userIsAuthenticated"
       (click)="toggle()"
     >
