--- a/src/app/components/listings/listing-show/listing-show.component.scss
+++ b/src/app/components/listings/listing-show/listing-show.component.scss
@@ -2,7 +2,7 @@ mat-spinner {
   margin: auto;
   margin-top: 4em;
 }
-.swap-button {
+.create-swap-button {
   font-size: 16px;
   background-color: #8fffc3;
   color: #232323;
