--- a/src/app/components/swaps/swap-create/swap-create.component.html
+++ b/src/app/components/swaps/swap-create/swap-create.component.html
@@ -1,13 +1,16 @@
 <form [formGroup]="swapForm" (submit)="onAddSwap()">
   <mat-form-field appearance="fill">
     <mat-label>Select a game to trade</mat-label>
-    <mat-select placeformControlName="listingOffered" [(value)]="selected">
+    <mat-select formControlName="listingOffered" [(value)]="selected">
       <mat-option
         *ngFor="let listing of currentUsersListings"
-        value="{{ listing.game.title }}"
+        value="{{ listing.id }}"
         >{{ listing.game.title }} - {{ listing.game.gameConsole }}</mat-option
       >
     </mat-select>
+    <mat-error *ngIf="swapForm.get('listingOffered')?.invalid"
+      >Please provide a swap offer</mat-error
+    >
   </mat-form-field>
   <button mat-raised-button type="submit" class="swap-button">Swap!</button>
 </form>
