add swap card html

--- a/src/app/components/swaps/swap-card/swap-card.component.html
+++ b/src/app/components/swaps/swap-card/swap-card.component.html
@@ -1,1 +1,9 @@
-<p>swap-card works!</p>
+<div>
+  <div class="grid-container">
+    <div class="swap-card">
+      <h3>{{ swap.listingOffered.user.firstName }}</h3>
+      <h3>{{ swap.listingOffered.game.title }}</h3>
+      <h3>{{ swap.listingOffered.condition }}</h3>
+    </div>
+  </div>
+</div>
