added profile button to heasder

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -19,6 +19,9 @@
         >Login</a
       >
       <button (click)="onLogout()" *ngIf="userIsAuthenticated" mat-button>
+        Profile
+      </button>
+      <button (click)="onLogout()" *ngIf="userIsAuthenticated" mat-button>
         Logout
       </button>
     </div>
